- Toggle has green colour when turned on

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,7 +34,8 @@ Volume 0"
         android:id="@+id/switchRemoteControl"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Enable Remote Volume Control" />
+        android:text="Enable Remote Volume Control"
+        android:trackTint="@color/green_grey"/>
 
     <!-- Spacer for layout -->
     <Space
